# sphinx-pytest

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/sphinx_pytest/: __init__.py  builders.py  plugin.py
tests/: test_basic.py
