[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_pytest"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pytest",
]
keywords = ["sphinx", "pytest"]
requires-python = ">=3.7"
dependencies = ["sphinx", "pytest"]

[project.urls]
Homepage = "https://github.com/chrisjsewell/sphinx-pytest"

[project.entry-points."pytest11"]
sphinx_test = "sphinx_pytest.plugin"

[project.entry-points."sphinx.builders"]
doctree = "sphinx_pytest.builders"

[tool.isort]
profile = "black"
force_sort_within_sections = true

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
