[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_pytest"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pytest",
]
keywords = ["sphinx", "pytest"]
requires-python = ">=3.10"
dependencies = ["sphinx", "pytest"]

[project.urls]
Homepage = "https://github.com/sphinx-extensions2/sphinx-pytest"

[project.entry-points."pytest11"]
sphinx_test = "sphinx_pytest.plugin"

[project.entry-points."sphinx.builders"]
doctree = "sphinx_pytest.builders"

[dependency-groups]
mypy = [
    "mypy==1.19.1",
    "types-docutils",
    "sphinx~=8.0",
    "pytest",
]
ruff = ["ruff~=0.9"]

[tool.ruff.lint]
extend-select = ["B", "C4", "FA", "I", "ICN", "ISC", "N", "PERF", "PGH", "PIE", "RUF", "SIM", "UP"]
extend-ignore = ["ISC001"]

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
strict_equality = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["docutils.*"]
ignore_missing_imports = true
